# internal/transport/rabbit/entity/withdrawal.go
@@ -7,17 +7,22 @@ type Withdrawal struct {
 	StationsСount int       `json:"stationsСount"`
 	Service       string    `json:"service"`
 	ForDate       time.Time `json:"forDate"`
+	WashServerID  string    `json:"washServerID"`
 }
 
 type WithdrawalSuccess struct {
-	GroupId       string `json:"groupId"`
-	StationsСount int    `json:"stationsСount"`
-	Service       string `json:"service"`
+	GroupId       string    `json:"groupId"`
+	StationsСount int       `json:"stationsСount"`
+	Service       string    `json:"service"`
+	ForDate       time.Time `json:"forDate"`
+	WashServerID  string    `json:"washServerID"`
 }
 
 type WithdrawalFailure struct {
-	GroupId       string `json:"groupId"`
-	StationsСount int    `json:"stationsСount"`
-	Service       string `json:"service"`
-	Error         string `json:"errors"`
+	GroupId       string    `json:"groupId"`
+	StationsСount int       `json:"stationsСount"`
+	Service       string    `json:"service"`
+	ForDate       time.Time `json:"forDate"`
+	WashServerID  string    `json:"washServerID"`
+	Error         string    `json:"error"`
 }
